--- a/src/components/Skills/skills.style.css
+++ b/src/components/Skills/skills.style.css
@@ -7,7 +7,7 @@
 }
 
 .skills-section .CircularProgressbar-text {
-  fill: var(--orange);
+  fill: #ffa696;
   font-weight: 500;
   font-style: italic;
 }
